--- a/resources/index.html
+++ b/resources/index.html
@@ -9,8 +9,11 @@
 <h1>Pixel Art Project</h1>
 
 <div id="palette">
-	<div class="pen" style="background-color: white;"></div>"
-	<div class="pen" style="background-color: black;"></div>"
+	<div class="pen" style="background-color: white;"onclick="setPenColor('white')"></div>
+	<div class="pen" style="background-color: black;"onclick="setPenColor('black')"></div>
+	<div class="pen" style="background-color: rgb(26, 143, 197);"onclick="setPenColor('rgb(26, 143, 197)')"></div>
+	<div class="pen" style="background-color: rgb(79, 15, 197);"onclick="setPenColor('rgb(79, 15, 197)')"></div>
+	<div class="pen" style="background-color: rgb(226, 19, 226);"onclick="setPenColor('rgb(226, 19, 226)')"></div>
 </div>
 <div id="art">
 	<div class="row">
@@ -22,18 +25,24 @@
 		<div class="pixel" onclick="setPixelColor(this)"></div>
 		<div class="pixel" onclick="setPixelColor(this)"></div>
 		<div class="pixel" onclick="setPixelColor(this)"></div>
-	</div>
-	<div class="row">
-		<div class="pixel" onclick="setPixelColor(this)"></div>
-		<div class="pixel" onclick="setPixelColor(this)"></div>
-		<div class="pixel" onclick="setPixelColor(this)"></div>
-		<div class="pixel" onclick="setPixelColor(this)"></div>
-		<div class="pixel" onclick="setPixelColor(this)"></div>
-		<div class="pixel" onclick="setPixelColor(this)"></div>
 		<div class="pixel" onclick="setPixelColor(this)"></div>
 		<div class="pixel" onclick="setPixelColor(this)"></div>
 	</div>
 	<div class="row">
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+	</div>
+	<div class="row">
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
 		<div class="pixel" onclick="setPixelColor(this)"></div>
 		<div class="pixel" onclick="setPixelColor(this)"></div>
 		<div class="pixel" onclick="setPixelColor(this)"></div>
@@ -52,18 +61,24 @@
 		<div class="pixel" onclick="setPixelColor(this)"></div>
 		<div class="pixel" onclick="setPixelColor(this)"></div>
 		<div class="pixel" onclick="setPixelColor(this)"></div>
-	</div>
-	<div class="row">
-		<div class="pixel" onclick="setPixelColor(this)"></div>
-		<div class="pixel" onclick="setPixelColor(this)"></div>
-		<div class="pixel" onclick="setPixelColor(this)"></div>
-		<div class="pixel" onclick="setPixelColor(this)"></div>
-		<div class="pixel" onclick="setPixelColor(this)"></div>
-		<div class="pixel" onclick="setPixelColor(this)"></div>
 		<div class="pixel" onclick="setPixelColor(this)"></div>
 		<div class="pixel" onclick="setPixelColor(this)"></div>
 	</div>
 	<div class="row">
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+	</div>
+	<div class="row">
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
 		<div class="pixel" onclick="setPixelColor(this)"></div>
 		<div class="pixel" onclick="setPixelColor(this)"></div>
 		<div class="pixel" onclick="setPixelColor(this)"></div>
